force-app/main/default/objects/Data_Field__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Returns one of the DisplayType enum values, depending on the type of field</description>
    <inlineHelpText>Returns one of the DisplayType enum values, depending on the type of field</inlineHelpText>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>