force-app/main/default/objects/Data_Field__c/fields/Unique__c.field-meta.xml
<CustomField>
    <fullName>Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the value for the field must be unique, false otherwise</description>
    <inlineHelpText>True if the value for the field must be unique, false otherwise</inlineHelpText>
    <label>Unique</label>
    <type>Checkbox</type>
</CustomField>