force-app/main/default/objects/Data_Field__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <type>TextArea</type>
</CustomField>