force-app/main/default/objects/Data_Field__c/fields/Write_Requires_Master_Read__c.field-meta.xml
<CustomField>
    <fullName>Write_Requires_Master_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if writing to the detail object requires read sharing instead of read/write sharing of the parent</description>
    <inlineHelpText>True if writing to the detail object requires read sharing instead of read/write sharing of the parent</inlineHelpText>
    <label>Write Requires Master Read</label>
    <type>Checkbox</type>
</CustomField>