force-app/main/default/objects/Data_Field__c/listViews/Customer_to_Client.listView-meta.xml
<ListView>
    <fullName>Customer_to_Client</fullName>
    <columns>Data_Object__c</columns>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>User_Story__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Description__c</columns>
    <columns>Is_Field_History_Tracked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Label__c</field>
        <operation>contains</operation>
        <value>customer</value>
    </filters>
    <label>Customer to Client</label>
</ListView>