force-app/main/default/objects/Data_Field__c/listViews/Durable_Id.listView-meta.xml
<ListView>
    <fullName>Durable_Id</fullName>
    <columns>Data_Object__c</columns>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>Length__c</columns>
    <columns>User_Story__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Description__c</columns>
    <columns>Is_Field_History_Tracked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>durableid__c</value>
    </filters>
    <label>Durable Id</label>
</ListView>