force-app/main/default/objects/Data_Field__c/listViews/Persistent_Cache.listView-meta.xml
<ListView>
    <fullName>Persistent_Cache</fullName>
    <columns>Data_Object__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>User_Story__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_Object__c</field>
        <operation>notContain</operation>
        <value>ChangeEvent</value>
    </filters>
    <filters>
        <field>Data_Object__c</field>
        <operation>equals</operation>
        <value>PersistentCache__c</value>
    </filters>
    <label>Persistent Cache</label>
</ListView>